Flickering fix

--- a/src/css/partials/_common.scss
+++ b/src/css/partials/_common.scss
@@ -1,3 +1,7 @@
+html.sr .load-hidden {
+    visibility: hidden;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f6f9fc;
